# forbiddenfp

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: add_two_numbers.py  evaluate_division.py  game_of_life.py  longest_common_prefix.py  lorem_ipsum.txt  parse_console_output.py  two_sum.py  valid_parentheses.py  word_count.py
examples/aoc2023/: README.md  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
src/forbiddenfp/: __init__.py
typing/: builtins.pyi
