[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "forbiddenfp"
version = "0.9.9.2"
description = "Forbidden Functional Programming in Python."
readme = "README.md"
dependencies = [
    "forbiddenfruit",
    "typing_extensions",
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [{ name = "yx-z", email = "yx-z@outlook.com" }]

[project.urls]
Homepage = "https://github.com/yx-z/forbiddenfp"
Issues = "https://github.com/yx-z/forbiddenfp/issues"
