[metadata]
name = forbiddenfp
version = 0.9.9.2
author = David
author_email = yx.z@hotmail.com
description = Forbidden Functional Programming in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yx-z/forbiddenfp
project_urls =
    Bug Tracker = https://github.com/yx-z/forbiddenfp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src